--- a/latex/main.tex
+++ b/latex/main.tex
@@ -14,9 +14,11 @@
 \usepackage{fancyhdr}
 \usepackage{graphicx}
 \usepackage[utf8]{inputenc}
+\usepackage{listings}
 \usepackage[numbers]{natbib}
 \usepackage{parskip}
 \usepackage{subcaption}
+\usepackage{xcolor}
 
 \usepackage[vcentering,dvips]{geometry}
 \geometry{
@@ -39,6 +41,8 @@
   menucolor=black,
   runcolor=black,
   urlcolor=black]{hyperref}
+
+\setcounter{tocdepth}{2}
 
 \definecolor{Gray}{gray}{0.9}
 \newcommand{\dotscale}{0.7}
