--- a/latex/math_commands.tex
+++ b/latex/math_commands.tex
@@ -5,8 +5,10 @@
 \newcommand{\mA}{{\bf A}}
 \newcommand{\mB}{{\bf B}}
 \newcommand{\mC}{{\bf C}}
+\newcommand{\mX}{{\bf X}}
 
 %% Vectors
+\newcommand{\va}{{\bf a}}
 \newcommand{\vr}{{\bf r}}
 \newcommand{\vu}{{\bf u}}
 \newcommand{\vv}{{\bf v}}
@@ -21,6 +23,8 @@
 \newcommand{\gE}{\mathcal{E}}
 \newcommand{\gG}{\mathcal{G}}
 \newcommand{\gI}{\mathcal{I}}
+\newcommand{\gN}{\mathcal{N}}
+\newcommand{\gP}{\mathcal{P}}
 \newcommand{\gT}{\mathcal{T}}
 \newcommand{\gU}{\mathcal{U}}
 \newcommand{\gX}{\mathcal{X}}
@@ -33,3 +37,4 @@
 %% <s> and </s> tokens
 \newcommand{\sos}{\textrm{<s>}}
 \newcommand{\eos}{\textrm{</s>}}
+\newcommand{\blank}{\textrm{<b>}}
