--- a/notebooks/extended_examples.ipynb
+++ b/notebooks/extended_examples.ipynb
@@ -321,8 +321,8 @@
     "\n",
     "```\n",
     "a   b a\n",
-    "a a b b\n",
     "  I   S \n",
+    "a a b b\n",
     "```"
    ]
   },
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "a14f710e",
    "metadata": {},
    "outputs": [],
@@ -545,25 +545,25 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "Let's turn to the set $\\gA_{\\mX, \\vy}$ which we will also represent as an acceptor. This acceptor should have a path for every possible alignment between $\\mX$ and $\\vy$. We'll construct $\\gA_{\\mX, \\vy}$ in two steps. First, we can encode the set of allowed alignments of arbitrary length for a given sequence $\\vy$ with a graph, $\\gA_\\vy$. As an example, for the sequence $ab$ the graph $\\gA_\\vy$ is shown below."
+    "Let's turn to the set $\\gA_{\\mX, \\vy}$ which we will also represent as an acceptor. This acceptor should have a path for every possible alignment between $\\mX$ and $\\vy$. We'll construct $\\gA_{\\mX, \\vy}$ in two steps. First, we can encode the set of allowed alignments of arbitrary length for a given sequence $\\vy$ with a graph, $\\gA_\\vy$. As an example, the graph $\\gA_\\vy$ for the sequence $ab$ is shown below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "1d348a09",
    "metadata": {},
    "outputs": [],
    "source": [
-    "AY = gtn.Graph()\n",
-    "AY.add_node(start=True)\n",
-    "AY.add_node()\n",
-    "AY.add_node(accept=True)\n",
-    "AY.add_arc(src_node=0, dst_node=0, label=0)\n",
-    "AY.add_arc(src_node=0, dst_node=1, label=0)\n",
-    "AY.add_arc(src_node=1, dst_node=1, label=1)\n",
-    "AY.add_arc(src_node=1, dst_node=2, label=1)\n",
-    "gtn.draw(AY, \"figures/asg_alignments.svg\", isymbols=symbols)"
+    "Ay = gtn.Graph()\n",
+    "Ay.add_node(start=True)\n",
+    "Ay.add_node()\n",
+    "Ay.add_node(accept=True)\n",
+    "Ay.add_arc(src_node=0, dst_node=0, label=0)\n",
+    "Ay.add_arc(src_node=0, dst_node=1, label=0)\n",
+    "Ay.add_arc(src_node=1, dst_node=1, label=1)\n",
+    "Ay.add_arc(src_node=1, dst_node=2, label=1)\n",
+    "gtn.draw(Ay, \"figures/asg_alignments.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -585,13 +585,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "ac917f10",
    "metadata": {},
    "outputs": [],
    "source": [
-    "AXY = gtn.intersect(AY, E)\n",
-    "gtn.draw(AXY, \"figures/asg_constrained.svg\", isymbols=symbols)"
+    "AXy = gtn.intersect(Ay, E)\n",
+    "gtn.draw(AXy, \"figures/asg_constrained.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -730,7 +730,7 @@
     "\n",
     "where $a_0$ is a special start of sequence token $\\textrm{<s>}$. We can use the alignment scores in the same manner as above and the rest of the loss function is unchanged. \n",
     "\n",
-    "Let's see how to incorporate transitions using an acceptor and graph operations. I'll rely on the ideas introduced in the section on [$n$-gram langauge models](#ngrams), so now is a good time to review that section. The first step is to encode the bigram model as a graph, as shown below:\n",
+    "Let's see how to incorporate transitions using an acceptor and graph operations. I'll rely on the ideas introduced in the section on [$n$-gram langauge models](#ngrams), so now is a good time to review that section. The first step is to encode the bigram model as a graph, as shown below.\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
@@ -760,22 +760,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "4d3d5cd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The ASG loss is 4.776.\n"
+     ]
+    }
+   ],
    "source": [
-    "def ASG(E, B, AY):\n",
+    "def ASG(E, B, Ay):\n",
     "    # Compute constrained and normalization graphs:\n",
-    "    AXY = gtn.intersect(gtn.intersect(B, AY), E)\n",
+    "    AXy = gtn.intersect(gtn.intersect(B, Ay), E)\n",
     "    ZX = gtn.intersect(B, E)\n",
     "    \n",
     "    # Forward both graphs:\n",
-    "    AXY_score = gtn.forward_score(AXY)\n",
+    "    AXy_score = gtn.forward_score(AXy)\n",
     "    ZX_score = gtn.forward_score(ZX)\n",
     "    \n",
     "    # Compute the loss:\n",
-    "    loss = gtn.negate(gtn.subtract(AXY_score, ZX_score))\n",
+    "    loss = gtn.negate(gtn.subtract(AXy_score, ZX_score))\n",
     "    \n",
     "    # Clear the previous gradients:\n",
     "    E.zero_grad()\n",
@@ -798,7 +806,7 @@
     "        B.add_arc(src_node=i, dst_node=(j + 1), label=j)\n",
     "        \n",
     "# Call the ASG loss:\n",
-    "loss = ASG(E, B, AY)\n",
+    "loss = ASG(E, B, Ay)\n",
     "print(f\"The ASG loss is {loss:.3f}.\")\n",
     "\n",
     "# Access the graph containing the gradient for B:\n",
@@ -812,7 +820,7 @@
    "source": [
     "### ASG with Transducers\n",
     "\n",
-    "As a final step, I'll show how to construct the ASG criterion from even simpler transducer buildling blocks. The advantage of this approach is that it lets us easily experiment with changes to the criterion at a deeper level.\n",
+    "As a final step, I'll show how to construct the ASG criterion from even simpler transducer building blocks. The advantage of this approach is that it lets us easily experiment with changes to the criterion at a deeper level.\n",
     "\n",
     "Our goal is to compute $\\gA_\\vy$ from simpler graphs instead of hard-coding its structure directly. The simpler graphs will represent the individual tokens and the target sequence $\\vy$.\n",
     "\n",
@@ -821,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "141db9be",
    "metadata": {},
    "outputs": [],
@@ -849,7 +857,7 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "Next we construct the individual token graphs. These graphs encode the assumption that each token in an output maps to one or more repeats of the same token in an alignment. For example for the output $\\vy = ab$ and alignment $\\va = aaaabb$ the token $a$ maps to $aaaa$ and $b$ maps to  $bb$. For the token $a$, we can construct the token graph $\\gT_a$ shown below which has the desired property."
+    "Next we construct the individual token graphs. These graphs encode the assumption that each token in an output maps to one or more repeats of the same token in an alignment. For example for the output $\\vy = ab$ and alignment $\\va = aaaabb$ the token $a$ maps to $aaaa$ and $b$ maps to  $bb$. For the token $a$, the token graph $\\gT_a$ shown below has the desired property."
    ]
   },
   {
@@ -888,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "293071be",
    "metadata": {},
    "outputs": [],
@@ -924,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "1d665a0f",
    "metadata": {},
    "outputs": [
@@ -932,19 +940,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Equivalence check: False\n"
+      "Equivalence check: True\n"
      ]
     }
    ],
    "source": [
-    "AY2 = gtn.compose(T, Y)\n",
+    "Ay2 = gtn.compose(T, Y)\n",
     "# Clean-up AY by removing superfluous ϵ transitions\n",
     "# and converting it from a transducer to an acceptor\n",
     "# using the input labels:\n",
-    "AY2 = gtn.project_input(gtn.remove(AY2))\n",
+    "Ay2 = gtn.project_input(gtn.remove(Ay2))\n",
     "\n",
-    "gtn.draw(AY, \"figures/asg_alignments_v2.svg\", isymbols=symbols)\n",
-    "equiv = gtn.rand_equivalent(AY, AY2, num_samples=100)\n",
+    "equiv = gtn.rand_equivalent(Ay, Ay2, num_samples=100)\n",
     "print(f\"Equivalence check: {equiv}\")"
    ]
   },
@@ -953,11 +960,11 @@
    "id": "48badd59",
    "metadata": {},
    "source": [
-    "The graph $\\gA_\\vy$ can then be constructed by composing $\\gT$ and $\\gY$. In other words, $\\gA_\\vy = \\gT \\circ \\gY$. We have to be careful here. The graphs $\\gT$ and $\\gY$ are transducers and their order in the composition makes a difference. Because of the way we constructed them, we will only get the correct $\\gA_\\vy$ if $\\gT$ is on the first argument to the composition.\n",
+    "The graph $\\gA_\\vy$ can then be constructed by composing $\\gT$ and $\\gY$. In other words, $\\gA_\\vy = \\gT \\circ \\gY$. We have to be careful here. The graphs $\\gT$ and $\\gY$ are transducers and their order in the composition makes a difference. Because of the way we constructed them, we will only get the correct $\\gA_\\vy$ if $\\gT$ is the first argument to the composition.\n",
     "\n",
     "At this point, we can compute the ASG loss just as before. The remaining graphs $\\gE$ and $\\gB$ are unchanged.\n",
     "\n",
-    "As we mentioned, this decomposition of the ASG loss using simple graph building blokcs makes it easier to change. In the following section, we will show how to construct a different algorithm, Connectionist Temporal Classification, with only a minor modification to the ASG loss.\n",
+    "This decomposition of the ASG loss using simple graph building blokcs makes it easier to change. In the following section, I will show how to construct a different algorithm, Connectionist Temporal Classification, with only a minor modification to the ASG loss.\n",
     "\n",
     "## Connectionist Temporal Classification\n",
     "\n",
@@ -981,9 +988,7 @@
     "\\log p(\\vy \\mid \\mX) = \\LSE_{\\va \\in \\gA_{\\mX, \\vy}} \\log p(\\va).\n",
     "$$\n",
     "\n",
-    "The distinction between ASG and CTC is in the set of allowed alignments $\\gA_{\\mX, \\vy}$.\n",
-    "\n",
-    "Assuming we have log normalized scores on the arc weights of the emissions graph $\\gE$, the graph based CTC loss is: \n",
+    "The distinction between ASG and CTC is in the set of allowed alignments $\\gA_{\\mX, \\vy}$. Assuming we have log normalized scores on the arc weights of the emissions graph $\\gE$, the graph based CTC loss is: \n",
     "\n",
     "$$\n",
     "\\log p(\\vy \\mid \\mX) = \\LSE(\\gA_\\vy \\circ \\gE),\n",
@@ -994,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "3cc5bb7d",
    "metadata": {},
    "outputs": [],
@@ -1003,23 +1008,23 @@
     "symbols[3] = \"<b>\"\n",
     "\n",
     "# Construct the CTC alignment graph for \"ab\":\n",
-    "AY = gtn.Graph()\n",
-    "AY.add_node(start=True)\n",
-    "AY.add_node()\n",
-    "AY.add_node()\n",
-    "AY.add_node(accept=True)\n",
-    "AY.add_node(accept=True)\n",
-    "AY.add_arc(src_node=0, dst_node=0, label=3)\n",
-    "AY.add_arc(src_node=0, dst_node=1, label=0)\n",
-    "AY.add_arc(src_node=1, dst_node=1, label=0)\n",
-    "AY.add_arc(src_node=1, dst_node=2, label=3)\n",
-    "AY.add_arc(src_node=1, dst_node=3, label=1)\n",
-    "AY.add_arc(src_node=2, dst_node=2, label=3)\n",
-    "AY.add_arc(src_node=2, dst_node=3, label=1)\n",
-    "AY.add_arc(src_node=3, dst_node=3, label=1)\n",
-    "AY.add_arc(src_node=3, dst_node=4, label=3)\n",
-    "AY.add_arc(src_node=4, dst_node=4, label=3)\n",
-    "gtn.draw(AY, \"figures/ctc_alignments.svg\", isymbols=symbols)"
+    "Ay = gtn.Graph()\n",
+    "Ay.add_node(start=True)\n",
+    "Ay.add_node()\n",
+    "Ay.add_node()\n",
+    "Ay.add_node(accept=True)\n",
+    "Ay.add_node(accept=True)\n",
+    "Ay.add_arc(src_node=0, dst_node=0, label=3)\n",
+    "Ay.add_arc(src_node=0, dst_node=1, label=0)\n",
+    "Ay.add_arc(src_node=1, dst_node=1, label=0)\n",
+    "Ay.add_arc(src_node=1, dst_node=2, label=3)\n",
+    "Ay.add_arc(src_node=1, dst_node=3, label=1)\n",
+    "Ay.add_arc(src_node=2, dst_node=2, label=3)\n",
+    "Ay.add_arc(src_node=2, dst_node=3, label=1)\n",
+    "Ay.add_arc(src_node=3, dst_node=3, label=1)\n",
+    "Ay.add_arc(src_node=3, dst_node=4, label=3)\n",
+    "Ay.add_arc(src_node=4, dst_node=4, label=3)\n",
+    "gtn.draw(Ay, \"figures/ctc_alignments.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -1047,28 +1052,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "7ebdb3fa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Construct the CTC alignment graph for \"aa\":\n",
-    "AY_aa = gtn.Graph()\n",
-    "AY_aa.add_node(start=True)\n",
-    "AY_aa.add_node()\n",
-    "AY_aa.add_node()\n",
-    "AY_aa.add_node(accept=True)\n",
-    "AY_aa.add_node(accept=True)\n",
-    "AY_aa.add_arc(src_node=0, dst_node=0, label=3)\n",
-    "AY_aa.add_arc(src_node=0, dst_node=1, label=0)\n",
-    "AY_aa.add_arc(src_node=1, dst_node=1, label=0)\n",
-    "AY_aa.add_arc(src_node=1, dst_node=2, label=3)\n",
-    "AY_aa.add_arc(src_node=2, dst_node=2, label=3)\n",
-    "AY_aa.add_arc(src_node=2, dst_node=3, label=0)\n",
-    "AY_aa.add_arc(src_node=3, dst_node=3, label=0)\n",
-    "AY_aa.add_arc(src_node=3, dst_node=4, label=3)\n",
-    "AY_aa.add_arc(src_node=4, dst_node=4, label=3)\n",
-    "gtn.draw(AY_aa, \"figures/ctc_alignments_aa.svg\", isymbols=symbols)"
+    "Ay_aa = gtn.Graph()\n",
+    "Ay_aa.add_node(start=True)\n",
+    "Ay_aa.add_node()\n",
+    "Ay_aa.add_node()\n",
+    "Ay_aa.add_node(accept=True)\n",
+    "Ay_aa.add_node(accept=True)\n",
+    "Ay_aa.add_arc(src_node=0, dst_node=0, label=3)\n",
+    "Ay_aa.add_arc(src_node=0, dst_node=1, label=0)\n",
+    "Ay_aa.add_arc(src_node=1, dst_node=1, label=0)\n",
+    "Ay_aa.add_arc(src_node=1, dst_node=2, label=3)\n",
+    "Ay_aa.add_arc(src_node=2, dst_node=2, label=3)\n",
+    "Ay_aa.add_arc(src_node=2, dst_node=3, label=0)\n",
+    "Ay_aa.add_arc(src_node=3, dst_node=3, label=0)\n",
+    "Ay_aa.add_arc(src_node=3, dst_node=4, label=3)\n",
+    "Ay_aa.add_arc(src_node=4, dst_node=4, label=3)\n",
+    "gtn.draw(Ay_aa, \"figures/ctc_alignments_aa.svg\", isymbols=symbols)"
    ]
   },
   {
@@ -1091,9 +1096,9 @@
     "\n",
     "## CTC from Transducers\n",
     "\n",
-    "Like ASG we can construct the graph $\\gA_\\vy$ used in CTC from smaller building blocks. In fact, one of the motivations of decomposing ASG into simpler transducer buildling blocks is that it makes constructing CTC almost trivial. To get CTC, we just need to add the $\\blank$ token to the tokens graph with the correct semantics. The $\\blank$ token graph is a single start and accept state which encodes the fact that the blank is optional. The state has a self-loop which transduces $\\blank$ to $\\epsilon$ since $\\blank$ never yields an output token.\n",
+    "Like ASG we can construct the graph $\\gA_\\vy$ used in CTC from smaller building blocks. In fact, one of the motivations of decomposing ASG into simpler transducer buildling blocks is that it makes constructing CTC almost trivial. To get CTC, we just need to add the $\\blank$ token to the tokens graph with the correct semantics. The $\\blank$ token graph is a single start and accept state which encodes the fact that the blank is optional. The state has a self-loop which transduces $\\blank$ to $\\epsilon$, since $\\blank$ never yields an output token.\n",
     "\n",
-    "In graph operations, for ASG with the alphabet $\\{a, b, c\\}$, the graph $\\gA_\\vy$ is given by:\n",
+    "Recall for ASG with the alphabet $\\{a, b, c\\}$, the graph $\\gA_\\vy$ is given by:\n",
     "\n",
     "$$\n",
     "\\gA_\\vy = (\\gT_a + \\gT_b + \\gT_c)^* \\circ \\gY.\n",
@@ -1110,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "c656a573",
    "metadata": {},
    "outputs": [
@@ -1132,14 +1137,14 @@
     "tokens.append(blank_token)\n",
     "T = gtn.closure(gtn.union(tokens))\n",
     "\n",
-    "AY2 = gtn.compose(T, Y)\n",
+    "Ay2 = gtn.compose(T, Y)\n",
     "\n",
     "# Clean-up and convert AY to an acceptor:\n",
-    "AY2 = gtn.project_input(gtn.remove(AY2))\n",
+    "Ay2 = gtn.project_input(gtn.remove(Ay2))\n",
     "\n",
     "# Compare the AY for ab generated by hand to the one computed\n",
     "# from the token graph. They should be equivalent:\n",
-    "equiv = gtn.rand_equivalent(AY, AY2, num_samples=100)\n",
+    "equiv = gtn.rand_equivalent(Ay, Ay2, num_samples=100)\n",
     "print(f\"Equivalence check: {equiv}\")"
    ]
   }
